--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,15 @@ a:hover.navbar-brand.navbar-s {
     width: 100%;
     background: url("../img/background.jpg") no-repeat center center scroll;
 }
+.featurette-bg2 {
+    width: 100%;
+    background: url("../img/bg.jpg") no-repeat center center scroll;
+    padding-bottom: 40px;
+}
+.footer-bg{
+    width: 100%;
+    background:url("../img/header.jpg") no-repeat center center scroll;
+}
 .featurette {
     padding: 80px 0;
     overflow: hidden;
