--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 html,body {
-	font-family: "Microsoft Yahei", sans-serif;
+	font-family: "Microsoft Yahei", Calibri, Calibri Light, sans-serif;
     width: 100%;
     height: 100%;
 }
@@ -149,6 +149,7 @@ a:hover.navbar-brand.navbar-s {
 
 .text-muted{
     font-size: 30px;
+    font-family: Calibri Light, Calibri, Arial, sans-serif;
     line-height: 200%;
 }
 
